src/test/borrowck/borrowck_nested_calls_free.sq
// ignore

fn mutate(v: &mut i32) -> i32 {
    *v = 22;
    *v
}


fn add(v: &i32, w: i32) -> i32 {
    *v + w
}


fn main() {
    let mut a: i32 = 1;
    add(&a, mutate(&mut a));
}
